static/psi4manual/1.4.0/_sources/api/psi4.core.Functional.rst.txt
Functional
==========

.. currentmodule:: psi4.core

.. autoclass:: Functional
   :show-inheritance:

   .. rubric:: Methods Summary

   .. autosummary::

      ~Functional.alpha
      ~Functional.build_base
      ~Functional.citation
      ~Functional.compute_functional
      ~Functional.density_cutoff
      ~Functional.description
      ~Functional.is_gga
      ~Functional.is_lrc
      ~Functional.is_meta
      ~Functional.lsda_cutoff
      ~Functional.meta_cutoff
      ~Functional.name
      ~Functional.omega
      ~Functional.print_detail
      ~Functional.print_out
      ~Functional.set_alpha
      ~Functional.set_citation
      ~Functional.set_density_cutoff
      ~Functional.set_description
      ~Functional.set_gga
      ~Functional.set_lsda_cutoff
      ~Functional.set_meta
      ~Functional.set_meta_cutoff
      ~Functional.set_name
      ~Functional.set_omega
      ~Functional.set_parameter

   .. rubric:: Methods Documentation

   .. automethod:: alpha
   .. automethod:: build_base
   .. automethod:: citation
   .. automethod:: compute_functional
   .. automethod:: density_cutoff
   .. automethod:: description
   .. automethod:: is_gga
   .. automethod:: is_lrc
   .. automethod:: is_meta
   .. automethod:: lsda_cutoff
   .. automethod:: meta_cutoff
   .. automethod:: name
   .. automethod:: omega
   .. automethod:: print_detail
   .. automethod:: print_out
   .. automethod:: set_alpha
   .. automethod:: set_citation
   .. automethod:: set_density_cutoff
   .. automethod:: set_description
   .. automethod:: set_gga
   .. automethod:: set_lsda_cutoff
   .. automethod:: set_meta
   .. automethod:: set_meta_cutoff
   .. automethod:: set_name
   .. automethod:: set_omega
   .. automethod:: set_parameter
